# dupegrouper

./: .coverage  .gitignore  README.md  TODO.md  data.py  example.py  mkdocs.yml  pyproject.toml
.github/workflows/: build_package.yml  docs.yaml  docs.yml  publish-to-pypi.yml  publish_to_pypi.yml  publish_to_testpypi.yml  python-validation.yml  release.yml
docs/: index.md  make.py
docs/api/: dupegrouper.html  search.js
docs/api/dupegrouper/: base.html  definitions.html  frame.html  strategies.html  strategy.html
docs/docs/api/: pdoc.md  search.js
docs/docs/api/pdoc/: doc.md
dupe_grouper/: base.py  custom.py  data.py  deduplication.py  exact.py  fuzzy.py  helpers.py  main.py  strategy.py  tfidf.py
dupegrouper/: __init__.py  base.py  definitions.py  strategy.py
dupegrouper/dataframes/: pandas.py  polars.py
dupegrouper/frame/: dataframe.py
dupegrouper/frame/methods/: pandas.py  polars.py
dupegrouper/frames/: __init__.py  dataframe.py
dupegrouper/frames/methods/: __init__.py  pandas.py  polars.py  spark.py
dupegrouper/strategies/: __init__.py  custom.py  exact.py  fuzzy.py  tfidf.py
dupegrouper/wrappers/: dataframe.py
dupegrouper/wrappers/dataframes/: __init__.py  _pandas.py  _polars.py  _spark.py  polars.py
tests/: conftest.py  test_base.py  test_spark.py  test_strategy.py
tests/integration/: test_dedupe_matrix.py  test_spark.py
tests/strategies/: test_custom.py  test_fuzzy.py  test_tfidf.py
tests/unit/: test_base.py  test_dataframe_wrappers.py  test_strategy.py
tests/unit/strategies/: test_custom.py  test_fuzzy.py  test_tfidf.py
