[tool.poetry]
name = "dupe-grouper"
version = "0.1.0"
description = ""
authors = ["VictorAutonell-Oiry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.24.0"
fuzzywuzzy = "^0.18.0"
rapidfuzz = "^3.12.2"
scikit-learn = "^1.6.1"
sparse-dot-topn = "^1.1.5"
multipledispatch = "^1.0.0"
dask = "^2025.2.0"
pyarrow = "^19.0.1"


[tool.poetry.group.dev.dependencies]
faker = "^37.0.0"
ipython = "^9.0.2"
ipykernel = "^6.29.5"
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
