[tool.poetry]
name = "dupegrouper"
version = "0.1.2"
description = "A Python library for grouping duplicate data efficiently."
authors = ["VictorAutonell-Oiry"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["duplicates", "deduplication", "grouping"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",

  "Programming Language :: Python :: 3.11",
]
repository = "https://github.com/VictorAut/dupegrouper/"
documentation = "https://victorautonell-oiry.me/dupegrouper/dupegrouper.html"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
polars = "^1.24.0"
rapidfuzz = "^3.12.2"
scikit-learn = "^1.6.1"
sparse-dot-topn = "^1.1.5"
multipledispatch = "^1.0.0"
typing-extensions = "^4.13.0"


[tool.poetry.group.dev.dependencies]
faker = "^37.0.0"
ipython = { version = "^9.0.2", python = ">=3.11" }
ipykernel = "^6.29.5"
black = "^25.1.0"
ruff = "^0.11.2"
mypy = "^1.15.0"
pandas-stubs = { version = "^2.2.3.250308", python = ">=3.10" }
scipy-stubs = { version = "^1.15.2.1", python = ">=3.10" }
tox = "^4.25.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["multipledispatch.*"]
follow_untyped_imports = true

[tool.black]
line-length = 120

[tool.tox]
requires = ["tox>=4"]
env_list = ["format", "lint", "type", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base] # fallback for non explicitely defined [tool.tox.*] i.e. py39 and up
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy==1.11.2", "types-cachetools>=5.5.0.20240820", "types-chardet>=5.0.4.6"]
commands = [["mypy", "src{/}tox"], ["mypy", "tests"]]